failure section rough design complete

--- a/index.html
+++ b/index.html
@@ -5,23 +5,44 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>New Year</title>
+    <!-- external stylesheet  -->
     <link rel="stylesheet" href="./css/main.css">
+    <!-- google font  -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <!-- font awesome kit  -->
+    <script src="https://kit.fontawesome.com/5e41d8dc2b.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header class="header">
+        <!-- banner start  -->
         <div class="banner-container">
             <h1 class="banner-title">All Thinks Are Possible If You believe</h1>
             <p class="banner-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form,
             by injected humour, or randomised words</p>
             <button class="btn-primary">Contact Us</button>
         </div>
+        <!-- banner end  -->
 
     </header>
     <main>
-
+        <!-- failure section start  -->
+        <section class="failure-section">
+            <div class="failure-left">
+                <img src="./images/person.png" alt="">
+            </div>
+            <div class="failure-right">
+                <h2 class="section-title">My failures of previous year</h2>
+                <p class="section-description">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature
+                from 45 BC, making it over 2000 years old. Richard McClintock.</p>
+                <h4><i class="fa-solid fa-check"></i> Contrary to popular belief, is not simply.</h4>
+                <h4><i class="fa-solid fa-check"></i> Contrary to popular belief.</h4>
+                <h4><i class="fa-solid fa-check"></i> Contrary to popular , is not simply.</h4>
+                <h4><i class="fa-solid fa-check"></i> Contrary to popular belief, is not simply.</h4>
+                <h4><i class="fa-solid fa-check"></i> Contrary to popular simply.</h4>
+            </div>
+        </section>
     </main>
     <footer>
 
