failure section complete

--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
                 <h2 class="section-title">My failures of previous year</h2>
                 <p class="section-description">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature
                 from 45 BC, making it over 2000 years old. Richard McClintock.</p>
-                <h4><i class="fa-solid fa-check"></i> Contrary to popular belief, is not simply.</h4>
-                <h4><i class="fa-solid fa-check"></i> Contrary to popular belief.</h4>
-                <h4><i class="fa-solid fa-check"></i> Contrary to popular , is not simply.</h4>
-                <h4><i class="fa-solid fa-check"></i> Contrary to popular belief, is not simply.</h4>
-                <h4><i class="fa-solid fa-check"></i> Contrary to popular simply.</h4>
+                <h4 class="section-points"><i class="fa-solid fa-check"></i> Contrary to popular belief, is not simply.</h4>
+                <h4 class="section-points"><i class="fa-solid fa-check"></i> Contrary to popular belief.</h4>
+                <h4 class="section-points"><i class="fa-solid fa-check"></i> Contrary to popular , is not simply.</h4>
+                <h4 class="section-points"><i class="fa-solid fa-check"></i> Contrary to popular belief, is not simply.</h4>
+                <h4 class="section-points"><i class="fa-solid fa-check"></i> Contrary to popular simply.</h4>
             </div>
         </section>
     </main>
