my plans section initial design complete

--- a/index.html
+++ b/index.html
@@ -43,6 +43,31 @@
                 <h4 class="section-points"><i class="fa-solid fa-check"></i> Contrary to popular simply.</h4>
             </div>
         </section>
+        <!-- failure section end  -->
+        <!-- My Plans Section Start  -->
+        <section class="plans-section">
+            <div class="plans">
+                <img class="plan-image" src="./images/icons/web.png" alt="">
+                <h4 class="plan-title">Web Developement</h4>
+                <p class="plan-description">I Want to Start</p>
+            </div>
+            <div class="plans">
+                <img class="plan-image" src="./images/icons/web.png" alt="">
+                <h4 class="plan-title">Web Developement</h4>
+                <p class="plan-description">I Want to Start</p>
+            </div>
+            <div class="plans">
+                <img class="plan-image" src="./images/icons/web.png" alt="">
+                <h4 class="plan-title">Web Developement</h4>
+                <p class="plan-description">I Want to Start</p>
+            </div>
+            <div class="plans">
+                <img class="plan-image" src="./images/icons/web.png" alt="">
+                <h4 class="plan-title">Web Developement</h4>
+                <p class="plan-description">I Want to Start</p>
+            </div>
+
+        </section>
     </main>
     <footer>
 
