--- a/index.html
+++ b/index.html
@@ -103,7 +103,30 @@
         </section>
         <!-- contact me section end  -->
     </main>
-    <footer>
+    <footer class="footer-container">
+        <!-- footer start  -->
+        <div class="footer">
+            <div class="footer-left">
+                <h2 class="footer-title">Future</h2>
+                <p class="footer-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form,
+                by injected humour, or randomised words</p>
+                <p class="contact-info">Email : info@gmail.com</p>
+                <p class="contact-info">Phone : 01500 00 00 00</p>
+                <div class="logo-container">
+                    <img src="./images/icons/fb.png" alt="">
+                    <img src="./images/icons/twitter.png" alt="">
+                    <img src="./images/icons/youtube.png" alt="">
+                </div>
+            </div>
+            <div class="footer-right">
+                <h2 class="footer-right-title">Subscribe</h2>
+                <input class="input-email" type="email" placeholder="Enter Your Email">
+                <br>
+                <button class="btn-subscribe">Subscribe</button>
+
+            </div>
+        </div>
+
 
     </footer>
 </body>
